# zk-verifID

./: SP1Proof.json  SP1VerifierABI.js  contract.js  package-lock.json  package.json
sp1-contracts/contracts/src/: HederaSP1Verifier.sol
zkpdf-template/: Cargo.toml  LICENSE-MIT  README.md
zkpdf-template/contracts/: README.md
zkpdf-template/contracts/src/: GSTVerifier.sol
zkpdf-template/contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
zkpdf-template/contracts/test/: GSTVerifier.t.sol
zkpdf-template/lib/: Cargo.toml
zkpdf-template/lib/src/: lib.rs  utils.rs
zkpdf-template/program/: Cargo.toml
zkpdf-template/program/src/: .main.rs.kate-swp  main.rs
zkpdf-template/script/: Cargo.toml  README.md  index.html
