[package]
version = "0.1.0"
name = "zkpdf-template-script"
edition = "2021"
default-run = "zkpdf-template"

[[bin]]
name = "zkpdf-template"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
sp1-sdk = "5.0.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
zkpdf-template-lib = { path = "../lib" }
dotenv = "0.15.0"
# API dependencies
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing-subscriber = "0.3"

[build-dependencies]
sp1-build = "5.0.8"
